src/styles/SCSS/style.scss
@import 'global';

@include hideElements;

#interface {
	position: relative;
	min-height: 100vh;
	min-width: 350px;
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	will-change: transform;
	overflow: hidden;
	transition-property: opacity, transform;
	text-shadow: 1px 2px 15px rgba(0, 0, 0, 0.2);
	font-weight: 300;

	&.pushed {
		-webkit-transform: translateX(-100px);
		transform: translateX(-100px);

		#background_overlay {
			-webkit-transform: scale(1.16) translateX(95px);
			transform: scale(1.16) translateX(95px);
		}
	}

	&.init {
		opacity: 0;
	}

	#background_overlay {
		z-index: -1;
		position: fixed;
		width: 100%;
		height: 100%;
		min-height: 100vh;
		transform: scale(1.1) translateX(0px);

		opacity: 0;
		transition: transform 0.4s, opacity 0.4s;

		#background {
			position: relative;
			width: 100%;
			height: 100%;
			background-color: #000;
			background-size: cover;
			background-position: center center;
		}
	}

	// clock & date
	#time {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		margin: 0 auto;

		#time-container {
			#clock {
				font-size: 6em;
				font-weight: 200;

				&.hidden {
					display: none;
				}
			}

			#analogClock {
				border: 0.2em solid white;
				border-radius: 100%;
				height: 8em;
				position: relative;
				margin: auto auto 2em auto;
				width: 8em;
				box-shadow: $textShadow;

				@include frostedGlass($a: 0.2);

				&:hover {
					background: rgba(255, 255, 255, 0.2);
				}

				&.hidden {
					display: none;
				}

				#center {
					position: absolute;
					z-index: 5;
					width: 0.4em;
					height: 0.4em;
					top: 50%;
					left: 50%;
					transform: translate(-50%, -50%);
					background-color: white;
					border-radius: 100px;
				}

				.numbers {
					position: absolute;
					display: block;
					opacity: 0.6;
					width: 100%;

					&.top {
						top: 10px;
						text-align: center;
					}

					&.right {
						top: 40%;
						right: 10px;
						text-align: right;
					}

					&.bottom {
						bottom: 10px;
						text-align: center;
					}

					&.left {
						top: 40%;
						left: 10px;
						text-align: left;
					}
				}

				// aiguilles
				span {
					background: white;
					border-radius: 20px;
					bottom: 50%;
					display: block;
					width: 0.2em;
					left: 50%;
					margin-left: -0.1em;
					position: absolute;
					transform-origin: bottom center;
					box-shadow: $textShadow;

					&#hours {
						height: 30%;
					}

					&#minutes {
						height: 45%;
					}

					&#analogSeconds {
						height: 45%;
						width: 0.1em;
						margin-left: -0.05em;
						opacity: 0.8;
						background-color: red;

						&.hidden {
							display: none;
						}
					}
				}
			}
		}

		#date {
			font-size: 1.5em;
			position: relative;
		}
	}

	// greetings & weather
	#main {
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		margin-right: auto;
		margin-left: auto;

		#greetings {
			font-size: 3em;
			font-weight: inherit;
			min-width: 300px;
			max-width: 16em;
			overflow: hidden;
			white-space: nowrap;
			text-overflow: ellipsis;
		}

		#weather {
			position: relative;

			#description {
				font-size: 1.5em;

				#forecast {
					display: none;

					&.shown {
						display: block;
					}
				}
			}

			#widget {
				display: flex;
				height: 5em;
				justify-content: center;
				align-items: center;

				img {
					height: 3em;
					width: 3em;
					border: none;
					padding-right: 10px;
				}

				p {
					font-size: 2em;
				}
			}
		}
	}

	#widget,
	#forecast,
	#current {
		transition: opacity 1.2s 0.1s;

		&.wait {
			opacity: 0;
		}
	}

	// search bar
	#sb_container {
		display: flex;
		visibility: visible;
		align-items: center;
		flex-grow: 0.4;
		padding: 0;
		margin: auto;
		width: 500px;
		max-width: calc(100% - 2em);

		#searchbar {
			height: 2.5em;
			width: 100%;
			padding: 0 1em;
			margin: auto;
			font-size: 1.3em;
			color: #fcfcfc;
			border: 0;
			border-radius: 10px;
			box-shadow: 0 1px 5px #0003;
			transition: background-color 0.2s;

			@supports not (backdrop-filter: none) {
				opacity: 0.8;
				transition: all 0.1s ease-in;
			}

			@include frostedGlass();

			&::placeholder {
				transition: opacity 0.2s;
				text-transform: none;
				color: rgba(255, 255, 255, 0.9);
				text-shadow: $textShadow;

				@supports not (backdrop-filter: none) {
					color: rgba(0, 0, 0, 0.6);
					text-shadow: unset;
				}
			}

			&:focus {
				@include frostedGlass($blur: 15px);
				color: white;

				@supports not (backdrop-filter: none) {
					color: rgba(0, 0, 0, 0.8);
				}
			}
		}

		&.shown {
			#searchbar:focus {
				opacity: 1;
			}
		}

		&.hidden {
			flex-grow: 0;
			visibility: hidden;
		}
	}

	#linkblocks {
		visibility: visible;
		display: flex;
		flex-wrap: wrap;
		justify-content: center;
		align-items: center;
		max-width: 100%;
		margin: 0 auto;
		padding: 2em 0;

		@include hidden();

		&.he_hidden {
			#linkblocks_inner {
				visibility: hidden;
				transition: visibility 0s 0.4s;
			}
		}

		#linkblocks_inner {
			width: 56em;
			display: flex;
			flex-wrap: wrap;
			justify-content: center;
			transition: visibility 0s 0s;
		}

		.block_parent {
			cursor: pointer;
			position: relative;
			margin: 1em;
			width: 5em;

			.block {
				.l_icon_wrap {
					overflow: hidden;
					width: 4.4em;
					height: 4.4em;
					margin: auto;
					position: relative;
					border-radius: 10px;
					background: $purewhite;
					border: 0.2em solid $purewhite;
					box-shadow: $textShadow;
					transition: border-color 0.1s, filter 0.1s;

					.l_icon {
						width: 100%;
						transition: opacity 0.4s;
					}

					&.selected {
						border: 0.2em solid $blue;
						filter: brightness(0.75);
					}

					&:hover {
						border: 0.2em solid $blue;
						transition: border-color 0.1s;
					}

					&:active {
						filter: brightness(0.75);
						transition: border-color 0.1s, filter 0.1s;
					}
				}

				span {
					display: block;
					margin: 0.5em 0;
					width: 100%;
					max-height: 3.3em;
					line-height: 1.1em;
					overflow: hidden;
					word-wrap: break-word;
					text-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
				}
			}

			button.remove {
				position: absolute;
				display: none;
				top: -1.2em;
				left: -1.2em;
				height: 30px;
				width: 30px;
				border: 0;
				border-radius: 100%;
				background: #ffffff;
				box-shadow: 0px 1px 10px 1.5px rgba(0, 0, 0, 0.3);
				z-index: 3;
				cursor: default;
				transition: all 0.1s;

				img {
					height: 0.9em;
					width: 0.9em;
					position: absolute;
					top: 50%;
					left: 50%;
					transform: translate(-50%, -50%);
				}

				&.visible {
					cursor: pointer;
				}

				&:hover {
					background: #bbb;
				}
			}

			&.removed {
				transform: scale(0);
				opacity: 0;
			}
		}
	}

	// Defunct shadows
	#weather::before,
	#date::before {
		content: '';
		position: absolute;
		left: 0;
		width: 100%;
		z-index: -1;
	}

	#date::before {
		top: -50px;
		box-shadow: 0px 0px 100px 40px #2224;
	}

	#weather::before {
		box-shadow: 0px 0px 150px 40px #2224;
	}
}

#edit_linkContainer {
	position: fixed;
	display: none;
	top: 0;
	height: 100vh;
	width: 100%;
	transition: transform 0.4s;
	z-index: 1;

	&.pushed {
		-webkit-transform: translateX(-160px);
		transform: translateX(-160px);
	}

	&.shown {
		@include animShow('flex');
		animation: animShow 0.4s forwards;
	}

	&.hiding {
		@include animHide();
		animation: animHide 0.4s forwards;
	}

	#edit_link {
		background: $purewhite;
		align-self: center;
		margin: auto;
		color: #333;
		width: 300px;
		padding: 1.5em;
		border-radius: 10px;
		z-index: 3;

		> div {
			position: relative;
		}

		h4 {
			text-align: left;
			margin: 1.5em 0px 0.5em 0px;
			padding: 0px;
		}

		.empty_input {
			position: absolute;
			top: 50%;
			right: 0em;
			color: #444;
			background-color: transparent;
			border-radius: 100%;
			font-size: 1em;
			opacity: 0;
			border: none;
			cursor: text;
			transform: translate(-50%, -50%);
			transition: opacity 0.2s, background-color 0.2s, color 0.2s;

			&.shown {
				opacity: 1;
				cursor: pointer;
			}

			&:hover {
				background-color: #ddd;
			}

			&:active {
				background-color: #ccc;
				color: #222;
			}
		}

		input[type='text'],
		input[type='url'] {
			border: 0px;
			height: 1em;
			width: 100%;
			font-size: 1em;
			padding: 1em;
			box-sizing: border-box;
			border-radius: 9px;
			font-size: 0.9em;
			background: $inputGrey;
			border-radius: 8px;
			height: 2.35em;
			margin: 0.3em 0;
			padding-right: 2.5em;
			transition: background 0.1s;

			&:focus {
				background: #d3d3d5;
				transition: background 0.1s;
			}
		}

		.linkOptions {
			display: flex;
			justify-content: space-between;
			width: 100%;
			margin-top: 1.5em;

			button {
				width: 45%;
				height: 40px;
				color: $blue;
				background-color: transparent;
				border: 0px;
				border-radius: 9px;
				font-size: 0.9em;
				padding: 0.6em;
				cursor: pointer;
				transition: opacity 0.1s ease-in;

				&#e_delete {
					color: red;
				}

				&:hover {
					text-decoration: underline;
				}

				&:active {
					text-decoration: underline;
					opacity: 0.8;
				}
			}
		}

		#e_close {
			display: block;
			background-color: transparent;
			border: 0px;
			cursor: pointer;
			text-align: left;
			padding: 0;
			transition: opacity 0.1s ease-in;
			font-size: 0.9em;
			color: $blue;
			margin-bottom: 2em;

			svg {
				width: 2em;
			}

			&:hover {
				text-decoration: underline;
			}

			&:active {
				text-decoration: underline;
				opacity: 0.8;
			}
		}
	}

	#onUnsplash {
		&.shown {
			display: inline;
		}

		@include hidden();
	}

	&.shown {
		display: flex;
	}
}

#credit {
	position: fixed;
	bottom: 1em;
	left: 1em;
	opacity: 0;
	text-shadow: $textShadow;
	transition: opacity 0.4s;

	&.shown {
		opacity: 1;
	}

	a {
		font-size: 14px;
		color: #fff9;
		text-decoration: none;
		transition: color 0.1s;

		&:hover {
			color: #fffe;
		}
	}
}

// review popup
#popup {
	position: absolute;
	justify-content: space-between;
	text-align: left;
	opacity: 0;
	left: 0;
	bottom: 5vh;
	padding: 1em 2em 1em 3em;
	border-radius: 0 10px 10px 0;
	box-sizing: border-box;
	will-change: transform;
	transform: translateX(-100%);

	@include allCentered();
	@include frostedGlass($blur: 10px);

	&.shown {
		opacity: 1;
		transform: translateX(0);
		transition: background-color 0.2s, backdrop-filter 0.2s, transform 1s 2s;
		box-shadow: $textShadow;

		@supports not (backdrop-filter: none) {
			background-color: rgba(255, 255, 255, 0.9);
			color: rgba(0, 0, 0, 0.7);
		}
	}

	&.removing {
		transform: translateX(-100%);
		transition: transform 0.6s 0s, opacity 0s 0.6s;
	}

	span {
		text-shadow: $textShadow;
	}

	span,
	a {
		max-width: 210px;
		font-size: 15px;
	}

	.choices {
		display: flex;
		flex-direction: column;

		a {
			text-decoration: none;
			background-color: $blue;
			color: $purewhite;
			border: 0;
			height: 30px;
			padding: 0 20px;
			margin: 3px 20px;
			border-radius: 5px;
			@include allCentered();
		}
	}

	#closePopup {
		margin-bottom: 5px;
		margin-left: 30px;
		font-size: 30px;
		cursor: pointer;
	}

	#closePopup,
	a {
		transition: filter 0.1s;
		&:hover {
			filter: brightness(90%);
		}

		&:active {
			filter: brightness(80%);
		}
	}
}

@import 'settings';
@import 'dark';
@import 'responsive';

